<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Beckhoff_8DI" Id="{7d182b78-c2a4-0451-05ce-de7e66006032}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'} 
TYPE ST_Beckhoff_8DI :
STRUCT
	bIn1	AT %Q* : BIT;
	bIn2	AT %Q* : BIT;
	bIn3	AT %Q* : BIT;
	bIn4	AT %Q* : BIT;
	bIn5	AT %Q* : BIT;
	bIn6	AT %Q* : BIT;
	bIn7	AT %Q* : BIT;
	bIn8	AT %Q* : BIT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>